--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@
 title: "Rasheed Ali Saadik Ali's Cybersecurity Portfolio"
 description: > 
   A professional cybersecurity portfolio showcasing skills, projects, and learning journey.
-theme: jekyll-theme-slate
+theme: jekyll-theme-hacker
